Fix missing margin between timestamp and summary

--- a/webui/assets/static/style.css
+++ b/webui/assets/static/style.css
@@ -12,6 +12,10 @@ details {
 	word-wrap: break-word
 }
 
+details summary span.timestamp {
+        margin: 0.5rem;
+}
+
 #critical details {
 	box-shadow: 2px 2px 2px red;
 }
